test/pass/test_float.sest
module TestFloat = struct

  val add(x, y) = x +. y

  val main(_) =
    print_debug(add(42.57, 1.))

end
