test/fail/error_arity.sest
module ErrorArity = struct

  val add(x, y) = x + y

  val main() = add(42)

end
